--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <description></description>
 
     <properties>
+        <damsel.version>1.296-f64ac93</damsel.version>
         <sonar.jacoco.reportPath>target/sites/jacoco/jacoco.exec</sonar.jacoco.reportPath>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -28,12 +29,16 @@
         <shared.resources.version>0.3.6</shared.resources.version>
         <swag.dark.api.version>1.19-67d8ed8</swag.dark.api.version>
         <dark.api.version>1.0.0-SNAPSHOT</dark.api.version>
-        <swag.rbk.api.client.version>0.0.6-SNAPSHOT</swag.rbk.api.client.version>
         <mapstruct.processor.version>1.3.0.Final</mapstruct.processor.version>
     </properties>
 
     <dependencies>
         <!--rbkmoney-->
+        <dependency>
+            <groupId>com.rbkmoney</groupId>
+            <artifactId>damsel</artifactId>
+            <version>${damsel.version}</version>
+        </dependency>
         <dependency>
             <groupId>com.rbkmoney</groupId>
             <artifactId>spring-boot-starter-metrics-statsd</artifactId>
@@ -55,11 +60,6 @@
             <version>${swag.dark.api.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.rbkmoney</groupId>
-            <artifactId>swag-rbk-api-client</artifactId>
-            <version>${swag.rbk.api.client.version}</version>
-        </dependency>
-        <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct-processor</artifactId>
             <version>${mapstruct.processor.version}</version>
@@ -72,6 +72,26 @@
         </dependency>
 
         <!--spring-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.keycloak</groupId>
+            <artifactId>keycloak-admin-client</artifactId>
+            <version>6.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.keycloak</groupId>
+            <artifactId>keycloak-spring-security-adapter</artifactId>
+            <version>6.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.1</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
