--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     <description></description>
 
     <properties>
-        <damsel.version>1.296-f64ac93</damsel.version>
+        <damsel.version>1.302-70373bd</damsel.version>
         <sonar.jacoco.reportPath>target/sites/jacoco/jacoco.exec</sonar.jacoco.reportPath>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -27,7 +27,6 @@
         <dockerfile.base.service.tag>bc95d0d6dc13c693acd2b274531a7d604b877bf3</dockerfile.base.service.tag>
         <dockerfile.registry>dr2.rbkmoney.com</dockerfile.registry>
         <shared.resources.version>0.3.6</shared.resources.version>
-        <swag.dark.api.version>1.19-67d8ed8</swag.dark.api.version>
         <dark.api.version>1.0.0-SNAPSHOT</dark.api.version>
         <mapstruct.processor.version>1.3.0.Final</mapstruct.processor.version>
     </properties>
@@ -57,18 +56,12 @@
         <dependency>
             <groupId>com.rbkmoney</groupId>
             <artifactId>swag-dark-api</artifactId>
-            <version>${swag.dark.api.version}</version>
+            <version>1.25-5418be0</version>
         </dependency>
         <dependency>
-            <groupId>org.mapstruct</groupId>
-            <artifactId>mapstruct-processor</artifactId>
-            <version>${mapstruct.processor.version}</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mapstruct</groupId>
-            <artifactId>mapstruct</artifactId>
-            <version>${mapstruct.processor.version}</version>
+            <groupId>com.rbkmoney.geck</groupId>
+            <artifactId>serializer</artifactId>
+            <version>0.6.9</version>
         </dependency>
 
         <!--spring-->
