--- a/pom.xml
+++ b/pom.xml
@@ -27,9 +27,10 @@
         <dockerfile.base.service.tag>bc95d0d6dc13c693acd2b274531a7d604b877bf3</dockerfile.base.service.tag>
         <dockerfile.registry>dr2.rbkmoney.com</dockerfile.registry>
         <shared.resources.version>0.3.6</shared.resources.version>
-        <swag.dark.api.version>1.19-67d8ed8</swag.dark.api.version>
+        <swag.dark.api.version>SNAPSHOT_1</swag.dark.api.version>
         <dark.api.version>1.0.0-SNAPSHOT</dark.api.version>
         <mapstruct.processor.version>1.3.0.Final</mapstruct.processor.version>
+        <questionary.version>1.3.0.Final</questionary.version>
     </properties>
 
     <dependencies>
@@ -48,6 +49,11 @@
             <groupId>com.rbkmoney.woody</groupId>
             <artifactId>woody-thrift</artifactId>
             <version>1.1.15</version>
+        </dependency>
+        <dependency>
+            <groupId>com.rbkmoney</groupId>
+            <artifactId>ank-proto</artifactId>
+            <version>1.12-ffa1012</version>
         </dependency>
         <dependency>
             <groupId>com.rbkmoney</groupId>
