--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,7 +27,7 @@ magista:
 keycloak:
   realm: internal
   auth-server-url: http://keycloak:8080/auth
-  resource: dark-api
+  resource: common-api
   not-before: 0
   ssl-required: none
   realm-public-key:
