--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,11 @@
             <version>1.5-f311a8a-server</version>
         </dependency>
         <dependency>
+            <groupId>com.rbkmoney</groupId>
+            <artifactId>swag-questionary</artifactId>
+            <version>1.3-bc37030-server</version>
+        </dependency>
+        <dependency>
             <groupId>com.rbkmoney.geck</groupId>
             <artifactId>serializer</artifactId>
             <version>0.6.9</version>
@@ -71,6 +76,11 @@
             <groupId>com.rbkmoney</groupId>
             <artifactId>questionary-proxy-aggr-proto</artifactId>
             <version>1.6-e2ed9e2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.rbkmoney</groupId>
+            <artifactId>ank-proto</artifactId>
+            <version>1.12-ffa1012</version>
         </dependency>
 
         <!--spring-->
