--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,7 @@
         <dependency>
             <groupId>com.rbkmoney</groupId>
             <artifactId>claim-management</artifactId>
-            <version>1.5-c7a7369-server</version>
+            <version>SNAPSHOT</version>
         </dependency>
 
         <!--spring-->
