--- a/pom.xml
+++ b/pom.xml
@@ -247,6 +247,29 @@
                     </execution>
                 </executions>
             </plugin>
+                             <plugin>
+                 <groupId>org.cyclonedx</groupId>
+                 <artifactId>cyclonedx-maven-plugin</artifactId>
+                 <version>1.5.1</version>
+                 <executions>
+                     <execution>
+                         <phase>verify</phase>
+                         <goals>
+                             <goal>makeAggregateBom</goal>
+                         </goals>
+                     </execution>
+                 </executions>
+                 <configuration>
+                     <schemaVersion>1.1</schemaVersion>
+                     <includeBomSerialNumber>true</includeBomSerialNumber>
+                     <includeCompileScope>true</includeCompileScope>
+                     <includeProvidedScope>true</includeProvidedScope>
+                     <includeRuntimeScope>true</includeRuntimeScope>
+                     <includeSystemScope>true</includeSystemScope>
+                     <includeTestScope>false</includeTestScope>
+                     <includeDependencyGraph>true</includeDependencyGraph>
+                 </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
