--- a/pom.xml
+++ b/pom.xml
@@ -10,14 +10,14 @@
     </parent>
 
     <artifactId>dark-api</artifactId>
-    <version>0.1.3-SNAPSHOT</version>
+    <version>0.1.4-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>dark-api</name>
     <description></description>
 
     <properties>
-        <damsel.version>1.365-f7d518b</damsel.version>
+        <damsel.version>1.382-718ab96</damsel.version>
         <sonar.jacoco.reportPaths>target/sites/jacoco/jacoco.exec</sonar.jacoco.reportPaths>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -34,11 +34,6 @@
         <!--rbkmoney-->
         <dependency>
             <groupId>com.rbkmoney</groupId>
-            <artifactId>damsel</artifactId>
-            <version>${damsel.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.rbkmoney</groupId>
             <artifactId>spring-boot-starter-metrics-statsd</artifactId>
             <version>1.1.0</version>
         </dependency>
@@ -53,29 +48,14 @@
             <version>${shared.resources.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.rbkmoney</groupId>
-            <artifactId>swag-dark-api</artifactId>
-            <version>1.51-24aa905-server</version>
-        </dependency>
-        <dependency>
-            <groupId>com.rbkmoney</groupId>
-            <artifactId>swag-questionary-aggr</artifactId>
-            <version>1.17-762d9a1-server</version>
-        </dependency>
-        <dependency>
-            <groupId>com.rbkmoney</groupId>
-            <artifactId>swag-questionary</artifactId>
-            <version>1.13-d3e296f-server</version>
-        </dependency>
-        <dependency>
-            <groupId>com.rbkmoney</groupId>
-            <artifactId>swag-messages</artifactId>
-            <version>1.10-60af8f2-server</version>
-        </dependency>
-        <dependency>
             <groupId>com.rbkmoney.geck</groupId>
             <artifactId>serializer</artifactId>
             <version>0.6.9</version>
+        </dependency>
+        <dependency>
+            <groupId>com.rbkmoney</groupId>
+            <artifactId>damsel</artifactId>
+            <version>${damsel.version}</version>
         </dependency>
         <dependency>
             <groupId>com.rbkmoney</groupId>
@@ -85,22 +65,42 @@
         <dependency>
             <groupId>com.rbkmoney</groupId>
             <artifactId>file-storage-proto</artifactId>
-            <version>1.26-ff9ce32</version>
+            <version>1.28-281e1ca</version>
         </dependency>
         <dependency>
             <groupId>com.rbkmoney</groupId>
             <artifactId>questionary-proxy-aggr-proto</artifactId>
-            <version>1.8-31d9486</version>
+            <version>1.11-f1611dc</version>
         </dependency>
         <dependency>
             <groupId>com.rbkmoney</groupId>
             <artifactId>ank-proto</artifactId>
-            <version>1.17-0d5b96b</version>
+            <version>1.20-9563a08</version>
         </dependency>
         <dependency>
             <groupId>com.rbkmoney</groupId>
-            <artifactId>claim-management</artifactId>
-            <version>1.11-363d565-server</version>
+            <artifactId>swag-claim-management</artifactId>
+            <version>1.13-97d415e-server</version>
+        </dependency>
+        <dependency>
+            <groupId>com.rbkmoney</groupId>
+            <artifactId>swag-dark-api</artifactId>
+            <version>1.54-808cd85-server</version>
+        </dependency>
+        <dependency>
+            <groupId>com.rbkmoney</groupId>
+            <artifactId>swag-questionary-aggr</artifactId>
+            <version>1.20-6545299-server</version>
+        </dependency>
+        <dependency>
+            <groupId>com.rbkmoney</groupId>
+            <artifactId>swag-questionary</artifactId>
+            <version>1.15-dab2091-server</version>
+        </dependency>
+        <dependency>
+            <groupId>com.rbkmoney</groupId>
+            <artifactId>swag-messages</artifactId>
+            <version>1.10-60af8f2-server</version>
         </dependency>
 
         <!--spring-->
@@ -171,6 +171,18 @@
             <groupId>io.github.benas</groupId>
             <artifactId>random-beans</artifactId>
             <version>3.6.0</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- Provide JUnit 5 API -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <!-- and the engine for surefire and failsafe -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
             <scope>test</scope>
         </dependency>
 
