--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
         <!--rbkmoney-->
         <dependency>
             <groupId>com.rbkmoney</groupId>
+            <artifactId>custom-actuator-endpoints</artifactId>
+            <version>0.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.rbkmoney</groupId>
             <artifactId>spring-boot-starter-metrics-statsd</artifactId>
             <version>1.1.0</version>
         </dependency>
