BJ-798: rational exponent

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -84,3 +84,7 @@ conversations:
 cabi:
   url: http://localhost:8022/v1/cabi
   networkTimeout: 30000
+
+dominant:
+  url: http://localhost:8022/v1/domain/repository_client
+  networkTimeout: 30000
