--- a/pom.xml
+++ b/pom.xml
@@ -110,12 +110,12 @@
         <dependency>
             <groupId>com.rbkmoney</groupId>
             <artifactId>cabi-proto</artifactId>
-            <version>1.3-70c7967</version>
+            <version>1.4-61769ca</version>
         </dependency>
         <dependency>
             <groupId>com.rbkmoney</groupId>
             <artifactId>swag-cabi</artifactId>
-            <version>1.3-9393fd0-server</version>
+            <version>1.4-f6e59d6-server</version>
         </dependency>
 
         <!--spring-->
@@ -168,6 +168,11 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.4</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+            <version>2.8.1</version>
         </dependency>
 
         <!--test-->
