--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,11 @@
         </dependency>
         <dependency>
             <groupId>com.rbkmoney</groupId>
+            <artifactId>swag-sender</artifactId>
+            <version>1.2-160d844-server</version>
+        </dependency>
+        <dependency>
+            <groupId>com.rbkmoney</groupId>
             <artifactId>analytics-proto</artifactId>
             <version>1.12-3b71837</version>
         </dependency>
