feedback domain restriction fix

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -62,7 +62,8 @@ keycloak:
 auth.enabled: true
 
 feedback:
-  emails:
+  fromEmail: no-reply@rbkmoney.com
+  toEmails:
     - feedback@rbkmoney.com
 
 info:
