--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.rbkmoney</groupId>
         <artifactId>service-parent-pom</artifactId>
-        <version>1.2.14</version>
+        <version>2.0.12</version>
     </parent>
 
     <artifactId>dark-api</artifactId>
@@ -14,14 +14,12 @@
     <packaging>jar</packaging>
 
     <name>dark-api</name>
-    <description></description>
+    <description>API gateway service</description>
 
     <properties>
-        <java.version>11</java.version>
         <server.port>8080</server.port>
         <management.port>8023</management.port>
         <exposed.ports>${server.port} ${management.port}</exposed.ports>
-        <dockerfile.base.service.tag>c0612d6052ac049496b72a23a04acb142035f249</dockerfile.base.service.tag>
         <dockerfile.registry>${env.REGISTRY}</dockerfile.registry>
         <mapstruct.processor.version>1.3.0.Final</mapstruct.processor.version>
         <resteasy.versions>4.5.8.Final</resteasy.versions>
